--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@passwordless-id/webauthn": "^2.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241202.0",
