--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
+  "arrowParens": "avoid",
   "printWidth": 100,
-  "singleQuote": true,
   "semi": true,
+  "singleQuote": true,
+  "trailingComma": "es5",
   "useTabs": false
 }
