--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "noman-land",
+  "type": "module",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "vite dev",
+    "build": "vite build --mode client && vite build",
     "start": "npm run dev",
-    "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "deploy": "$npm_execpath run build && wrangler deploy --no-bundle",
+    "cf-typegen": "wrangler types --env-interface Bindings"
   },
   "dependencies": {
     "hono": "^4.6.20"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250129.0",
+    "@hono/vite-build": "^1.3.0",
+    "@hono/vite-dev-server": "^0.18.1",
+    "vite": "^6.1.0",
     "wrangler": "^3.107.2"
   }
 }
