--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite dev",
     "build": "vite build --mode client && vite build",
     "start": "npm run dev",
-    "deploy": "$npm_execpath run build && wrangler deploy --no-bundle",
+    "deploy": "npm run build && wrangler deploy --no-bundle",
     "cf-typegen": "wrangler types --env-interface Bindings"
   },
   "dependencies": {
