--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vite build --mode client && vite build",
     "start": "npm run dev",
     "deploy": "npm run build && wrangler deploy --no-bundle",
-    "cf-typegen": "wrangler types --env-interface Bindings"
+    "cf-typegen": "wrangler types --env-interface Bindings",
+    "prettier": "prettier -w ./src"
   },
   "dependencies": {
     "hono": "^4.6.20"
@@ -15,6 +16,7 @@
     "@cloudflare/workers-types": "^4.20250129.0",
     "@hono/vite-build": "^1.3.0",
     "@hono/vite-dev-server": "^0.18.1",
+    "prettier": "^3.4.2",
     "vite": "^6.1.0",
     "wrangler": "^3.107.2"
   }
