--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "cf-typegen": "wrangler types --env-interface Bindings",
     "prettier": "prettier -w ./src"
   },
-  "dependencies": {
-    "hono": "^4.6.20"
-  },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250129.0",
-    "@hono/vite-build": "^1.3.0",
-    "@hono/vite-dev-server": "^0.18.1",
+    "@cloudflare/workers-types": "^4.20250410.0",
+    "@hono/vite-build": "^1.6.0",
+    "@hono/vite-dev-server": "^0.19.0",
+    "hono": "^4.7.6",
     "prettier": "^3.4.2",
-    "vite": "^6.1.0",
-    "wrangler": "^3.107.2"
+    "vite": "^6.2.5",
+    "wrangler": "^4.9.1"
   }
 }
